# unixem

./: CMakeLists.txt  README.md  build.bat
cmake/: toolchain-mingw64.cmake
include/: CMakeLists.txt  fsync.h  glob.h
include/unixem/sys/: resource.h
src/: CMakeLists.txt  fsync.c  mmap.c  unistd.c
